tests/snapshots/snapshot_terraform_tests__snapshot_alb_with_listeners.snap
---
source: tests/snapshot_terraform_tests.rs
expression: plan
---
{
  "configuration": {
    "root_module": {}
  },
  "format_version": "1.0",
  "resource_changes": [
    {
      "address": "aws_lb.main",
      "change": {
        "actions": [
          "create"
        ],
        "after": {
          "internal": false,
          "load_balancer_type": "application",
          "name": "main-alb"
        }
      },
      "type": "aws_lb"
    }
  ],
  "terraform_version": "1.5.0"
}
