tests/snapshots/snapshot_terraform_tests__snapshot_delete_operation.snap
---
source: tests/snapshot_terraform_tests.rs
expression: plan
---
{
  "configuration": {
    "root_module": {}
  },
  "format_version": "1.0",
  "resource_changes": [
    {
      "address": "aws_instance.old",
      "change": {
        "actions": [
          "delete"
        ],
        "after": null,
        "before": {
          "ami": "ami-old",
          "instance_type": "t2.micro"
        }
      },
      "type": "aws_instance"
    }
  ],
  "terraform_version": "1.5.0"
}
