tests/snapshots/snapshot_terraform_tests__snapshot_eks_cluster.snap
---
source: tests/snapshot_terraform_tests.rs
expression: plan
---
{
  "configuration": {
    "root_module": {}
  },
  "format_version": "1.0",
  "resource_changes": [
    {
      "address": "aws_eks_cluster.main",
      "change": {
        "actions": [
          "create"
        ],
        "after": {
          "name": "production",
          "role_arn": "arn:aws:iam::123456789012:role/eks-cluster",
          "version": "1.28"
        }
      },
      "type": "aws_eks_cluster"
    }
  ],
  "terraform_version": "1.5.0"
}
