tests/snapshots/snapshot_terraform_tests__snapshot_elasticache_cluster.snap
---
source: tests/snapshot_terraform_tests.rs
expression: plan
---
{
  "configuration": {
    "root_module": {}
  },
  "format_version": "1.0",
  "resource_changes": [
    {
      "address": "aws_elasticache_cluster.redis",
      "change": {
        "actions": [
          "create"
        ],
        "after": {
          "cluster_id": "my-redis",
          "engine": "redis",
          "node_type": "cache.t3.medium",
          "num_cache_nodes": 2
        }
      },
      "type": "aws_elasticache_cluster"
    }
  ],
  "terraform_version": "1.5.0"
}
