tests/snapshots/snapshot_terraform_tests__snapshot_empty_plan.snap
---
source: tests/snapshot_terraform_tests.rs
expression: plan
---
{
  "configuration": {
    "root_module": {}
  },
  "format_version": "1.0",
  "resource_changes": [],
  "terraform_version": "1.5.0"
}
