tests/snapshots/snapshot_terraform_tests__snapshot_lambda_with_provisioned_concurrency.snap
---
source: tests/snapshot_terraform_tests.rs
expression: plan
---
{
  "configuration": {
    "root_module": {}
  },
  "format_version": "1.0",
  "resource_changes": [
    {
      "address": "aws_lambda_function.api",
      "change": {
        "actions": [
          "create"
        ],
        "after": {
          "function_name": "api-handler",
          "memory_size": 512,
          "reserved_concurrent_executions": 100,
          "runtime": "python3.11",
          "timeout": 30
        },
        "before": null
      },
      "mode": "managed",
      "name": "api",
      "type": "aws_lambda_function"
    }
  ],
  "terraform_version": "1.5.0"
}
