tests/snapshots/snapshot_terraform_tests__snapshot_plan_with_no_changes.snap
---
source: tests/snapshot_terraform_tests.rs
expression: plan
---
{
  "configuration": {
    "root_module": {}
  },
  "format_version": "1.0",
  "resource_changes": [
    {
      "address": "aws_instance.web",
      "change": {
        "actions": [
          "no-op"
        ],
        "after": {
          "instance_type": "t3.medium"
        },
        "before": {
          "instance_type": "t3.medium"
        }
      },
      "type": "aws_instance"
    }
  ],
  "terraform_version": "1.5.0"
}
